--- a/index.html
+++ b/index.html
@@ -175,6 +175,12 @@
         .light-mode .article p {
             color: #000;
         }
+
+        /* Light mode specific styles for toggle button */
+        .light-mode #toggle-mode {
+            background-color: #000;
+            color: #fff;
+        }
     </style>
 </head>
 <body>
