--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="main-content">
             <h1>Hello, I'm ANAS SAYAH</h1>
             <div style="display: flex; align-items: center;">
-                <a href="https://tryhackme.com/p/2083946"><img src="https://tryhackme-badges.s3.amazonaws.com/DIPLER.png" alt="TryHackMe" style="height: 40px; margin-left: 10px;" /></a>
+                <script src="https://tryhackme.com/badge/2083946"></script>
             </div>
 
             <div id="about-me" class="article">
