--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
             transition: background-color 0.3s ease, color 0.3s ease;
         }
 
+.custom-icon {
+    font-size: 20px; /* Ajustez la taille de l'icône selon vos besoins */
+    color: #0072b1; /* Couleur personnalisée pour l'icône */
+    margin-right: 10px; /* Marge à droite pour l'espacement */
+}
+
+
         .container {
             display: flex;
             justify-content: flex-start;
@@ -202,6 +209,7 @@
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/anas-sayah/" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/SAYAHANAS" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                <a href="mailto:sayahanass02@gmail.com" aria-label="Envoyer un e-mail"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
         <div class="main-content">
