--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             top: 0;
         }
 
+
         .sidebar img {
             display: block;
             width: 100%;
@@ -191,6 +192,7 @@
         }
     </style>
 </head>
+<link rel="icon" href="logo.jpg" type="image/x-icon">
 <body>
     <div class="container">
         <div class="sidebar">
