--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ANAS SAYAH</title>
     <meta name="description" content="Anas Sayah's personal website, showcasing expertise in Cybersecurity, Mathematics, and Cryptography.">
     <meta name="keywords" content="Anas Sayah, Cybersecurity, Cryptography, Mathematics, University Hassan II Casablanca">
     <meta name="author" content="Anas Sayah">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://sayahanas.github.io/ANAS-SAYAH/">
+    <link rel="icon" href="path/to/your/favicon.ico" type="image/x-icon">
+    <title>Anas Sayah - Cybersecurity Expert</title>
+    <!-- Google Site Verification -->
+    <meta name="google-site-verification" content="google91191ac1845280e1">
     <!-- FontAwesome for social media icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
