--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="canonical" href="https://sayahanas.github.io/ANAS-SAYAH/">
     <link rel="icon" href="path/to/your/favicon.ico" type="image/x-icon">
     <title>Anas Sayah - Cybersecurity Expert</title>
-    <!-- Google Site Verification -->
-    <meta name="google-site-verification" content="google91191ac1845280e1">
     <!-- FontAwesome for social media icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Google Site Verification -->
+    <meta name="google-site-verification" content="qVoK3PimD-fqsO_w3K8JoY5PnJ-ICbyiy7UQB8ZZ938" />
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
