--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Anas Sayah's personal website, showcasing expertise in Cybersecurity, Mathematics, and Cryptography.">
-    <meta name="keywords" content="Anas Sayah, Cybersecurity, Cryptography, Mathematics, University Hassan II Casablanca">
+    <meta name="description" content="Welcome to Anas Sayah's official website, where expertise meets innovation in Cybersecurity and Cryptography. Explore a world of cutting-edge solutions, insightful analyses, and strategic perspectives that redefine digital security. Dive into a journey of excellence, where every challenge is met with expertise, and every solution sets a new standard in safeguarding digital assets. Join me in shaping the future of secure technologies.">
+    <meta name="keywords" content="Anas Sayah, Cybersecurity, Cryptography, Mathematics, University Hassan II Casablanca, Anassayah, DIPLER, cybersecurité">
     <meta name="author" content="Anas Sayah">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://sayahanas.github.io/ANAS-SAYAH/">
-    <link rel="icon" href="path/to/your/favicon.ico" type="image/x-icon">
-    <title>Anas Sayah - Cybersecurity Expert</title>
+    <link rel="icon" href="logo.jpg" type="image/x-icon">
+    <title>Anas Sayah</title>
     <!-- FontAwesome for social media icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Google Site Verification -->
